Overflows fixed

--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -13,3 +13,8 @@
 .btn-next:hover {
   background-color: var(--primary-hover);
 }
+@media(max-width:576px){
+  .card{
+    border-radius: 0;
+  }
+}
